TAG: mcvload-4-3-4-13
TAG: mcvload-4-3-4-12 - bad tag, bin dir only
DATE: 06/28/2010
STAFF: sc
CHANGES:
1) mcvload.config.default - INPUT_FILE_DEFAULT changed value
2) checkColumns.py - added sys.exit(1) if reporting missing columns
3) mcvload.sh - added running sanity and QC checks to this script
4) publishMcv - remove header line when copying to load input dir

TAG: mcvload-4-3-4-11
TAG: mcvload-4-3-4-10
DATE: 06/28/2010
STAFF: sc
CHANGES: Added runAddColumns 

TAG: mcvload-4-3-4-9
TAG: mcvload-4-3-4-8
DATE: 06/28/2010
STAFF: sc
CHANGES: TR6839 Marker Types
1) mcvload.config.default - added ADD_COLUMNS_EXT and ADD_COLUMNS_LOGFILE
   to support new cleansing script which adds columns
2) addColumns.py, addColumns - if any records missing column 9 and/or 10
   creates a new file with these columns

TAG: mcvload-4-3-4-7
TAG: mcvload-4-3-4-6
DATE: 06/24/2010
STAFF: sc
CHANGES: TR6839 Marker Types
1) updated index.html

TAG: mcvload-4-3-4-5
TAG: mcvload-4-3-4-4
DATE: 06/24/2010
STAFF: sc
CHANGES: TR6839 Marker Types
1) mcvload.config - Added RPT_NAMES_RPT
  this is how we report the set of reports that
  actually have errors
2) mcvQC.sh - removed echo of all the QC and bcp files
  Added cat'ing of RPT_NAMES_RPT and 
3) mcvQC.py - Added support for reporting the fatal vs
   non-fatal qc reports to stdout for the curators
4) run_mcv_vocload.sh - removed the -x at top

TAG: mcvload-4-3-4-3
DATE: 06/22/2010
STAFF: sc
CHANGES: TR6839 Marker Types
1) Added bin scripts and config files

TAG: mcvload-4-3-4-2
DATE: 06/15/2010
STAFF: sc
CHANGES: TR6839 Marker Types
1)run_mcv_vocload.sh - Added separate log in vocload 
runTimeMCV directory

TAG: mcvload-4-3-4-1
DATE: 06/01/2010
STAFF: sc
CHANGES: TR6839 Marker Types
1) Latest incarnation including moving SO IDs to 
   another logical DB.
2) QC stuff in config file, but QC scripts not yet
   checked int