@@ -4,8 +4,7 @@
 # defaults for MCV annotation load
 #
 
-#setenv ANNOTDATADIR	/mgi/all/wts_projects/6800/6839/data
-setenv ANNOTDATADIR	/home/sc/work/dataload/mcvload/bin
+setenv ANNOTDATADIR	/data/loads/mgi/mcvload/input
 setenv ANNOTMODE	append
 setenv ANNOTTYPENAME	"MCV/Marker"
 setenv ANNOTINPUTFILE  ${ANNOTDATADIR}/mcvload_annot.txt
